API - Add restock config to API /v1/watch/ json output #4099 (#4103)
